first work version with seconds and taking into account the transition between two observed urls

--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
 </head>
 <body>
     <div id="vk">
-        <p>vk - </p>
-        <p id="vkTime">
+        <div>vk - </div>
+        <div id="vkTime">
             <p class="hours">0</p>
             <p class="separator">:</p>
             <p class="minutes">0</p>
             <p class="separator">:</p>
             <p class="seconds">0</p>
-        </p>
+        </div>
     </div>
     <div id="youtube">
-        <p>youtube - </p>
-        <p id="youtubeTime">0</p>
+        <div>youtube - </div>
+        <div id="youtubeTime">
+            <p class="hours">0</p>
+            <p class="separator">:</p>
+            <p class="minutes">0</p>
+            <p class="separator">:</p>
+            <p class="seconds">0</p>
+        </div>
     </div>
-    <button id="update"></button>
 </body>
 </html>
