--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div id="vk">
-        <div>vk - </div>
-        <div id="vkTime">
+    <div id="vk" class="block">
+        <div class="title">vk</div>
+        <div class="watch">
             <p class="hours">0</p>
             <p class="separator">:</p>
             <p class="minutes">0</p>
@@ -15,9 +15,21 @@
             <p class="seconds">0</p>
         </div>
     </div>
-    <div id="youtube">
-        <div>youtube - </div>
-        <div id="youtubeTime">
+
+    <div class="block">
+        <div class="title">description</div>
+        <div class="watch">
+            <p class="hours">0</p>
+            <p class="separator">:</p>
+            <p class="minutes">0</p>
+            <p class="separator">:</p>
+            <p class="seconds">0</p>
+        </div>
+    </div>
+
+    <div id="youtube" class="block">
+        <div class="title">youtube</div>
+        <div class="watch">
             <p class="hours">0</p>
             <p class="separator">:</p>
             <p class="minutes">0</p>
