created a local storage structure in the browser and her automatic loading

--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
             <p class="seconds">0</p>
         </div>
     </div>
+
+    <button id="addbtn">Add</button>
+    
+    <script src="timeLoading.js"></script>
 </body>
 </html>
