added personal upload of blocks in pop-up

--- a/index.html
+++ b/index.html
@@ -5,41 +5,12 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div id="vk" class="block">
-        <div class="title">vk</div>
-        <div class="watch">
-            <p class="hours">0</p>
-            <p class="separator">:</p>
-            <p class="minutes">0</p>
-            <p class="separator">:</p>
-            <p class="seconds">0</p>
-        </div>
-    </div>
-
-    <div class="block">
-        <div class="title">description</div>
-        <div class="watch">
-            <p class="hours">0</p>
-            <p class="separator">:</p>
-            <p class="minutes">0</p>
-            <p class="separator">:</p>
-            <p class="seconds">0</p>
-        </div>
-    </div>
-
-    <div id="youtube" class="block">
-        <div class="title">youtube</div>
-        <div class="watch">
-            <p class="hours">0</p>
-            <p class="separator">:</p>
-            <p class="minutes">0</p>
-            <p class="separator">:</p>
-            <p class="seconds">0</p>
-        </div>
-    </div>
+    <div id="block_container"></div>
+    
 
     <button id="addbtn">Add</button>
     
+    <script src="blockAdding.js"></script>
     <script src="timeLoading.js"></script>
 </body>
 </html>
