added the opportunity to add an observed object

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 <body>
     <div id="block_container"></div>
     
+    <div id="block_adding">
+        <button id="addbtn">Add</button>
+        <label><input id="url_new_block" type="text" name="ulr">URL</label>
+        <label><input id="name_new_block" type="text" name="name">name</label>
+    </div>
 
-    <button id="addbtn">Add</button>
-    
     <script src="blockAdding.js"></script>
     <script src="timeLoading.js"></script>
 </body>
